# browser-bridge-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
browser_bridge_mcp/: __init__.py  actions.py  browser.py  runtime.py  server.py  state_store.py
docs/: architecture.md  prd-cookie-storage-management.md  prd-dialog-upload-download.md  prd-network-cdp-capture.md  prd-policy-guardrails.md  prd-session-trace-replay.md  prd-tab-management.md  prd-wait-primitives.md  roadmap.md
mcp/: browser-bridge-mcp.example.json
skills/browser-bridge-mcp-usage/: SKILL.md
tests/: test_actions.py  test_runtime.py  test_server_parser.py  test_state_store.py
