[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-bridge-mcp"
version = "0.1.0"
description = "MCP browser bridge that gives AI clients full access to a live browser environment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gianluca" }]
dependencies = [
  "mcp>=1.26.0",
  "nodriver @ git+https://github.com/codeisalifestyle/nodriver-reforged.git@main",
  "opencv-python>=4.8",
]

[project.scripts]
browser-bridge-mcp = "browser_bridge_mcp.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["browser_bridge_mcp*"]
